# template-cpp-cmake

./: .gitignore  README  build.sh  simple_build.sh
src/: CMakeLists.txt  conanfile.txt  main.cpp
